--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,49 @@
+html {
+    box-sizing: border-box;
+}
+
+
 ul {
     list-style-type: none;
-    margin: 0;
+}
+
+img {
+    display: block;
 }
 
 .gallery {
     display: flex;
-    width: 1440px;
-    padding: 24px 156px;
-    margin: 0 auto;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 24px;
+    align-items: center;
+    justify-content: flex-start;
+    column-gap: 24px;
+    row-gap: 48px;
+    list-style: none;
+    padding-left: 0;
+    margin: 0 auto;
+    max-width: 1128px;
+}
+
+.gallery-item {
+    flex-basis: calc((100% - 48px) / 3);
 }
 
 .gallery-image {
     width: 360px;
-    height: 200px;
-    transition: transform 0.5s;
+    height: 300px;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 2px 2px 2px 0 #020202;
+    transition: transform 300ms ease-in-out;
 }
 
-.gallery-image:hover {
-    transform: scale(1.05);
+.gallery-image:hover,
+.gallery-image:focus {
+    transform: scale(1.1);
+}
+
+.modal-img {
+    width: 1112px;
+    height: 640px;
+    border-radius: 25px;
 }
